syntax = "proto3";


package newArchitectureLab.apps.product;

// The product service definition.
service Product {

  rpc GetById (GetByIdRequest) returns (GetByIdResponse);
}


message GetByIdRequest {
  string Id = 1;
}


message GetByIdResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  int64 stock = 4;
  string productTypeId = 5;
}